Listen where a user is listening all streams, set its remote adr and can chat and send files